Implement JSON-RPC 2.0 support in ACP agent server and add corresponding tests